# tetrizz

./: .gitignore  Cargo.toml  index.css  index.html  package-lock.json
_bot_api/: .env  index.js  package-lock.json  package.json  test.js
_bot_api/src/: chat.js  play.js  utils.js
_bot_api/view_server_stuff/: index.html
bitboard/bitboard_derive/: Cargo.toml
bitboard/bitboard_derive/src/: lib.rs
bitboard/bitboard_traits/: Cargo.toml
bitboard/bitboard_traits/src/: lib.rs
src/: main.js
src/data/: pieces.js
src/game/: TetrisGame.js
src/game/data/: piece.js  srs_kick.js
src/helper/: collision.js  drawMino.js  movement.js
tetrizz/: Cargo.toml
tetrizz/benches/: map.rs
tetrizz/src/: battle.rs  keygen.rs  lib.rs  main.rs  movegen.rs  search.rs
tetrizz/src/eval/: base.rs  feature0.rs
tetrizz/src/utils/: data.rs  game.rs
utils/: Cargo.toml
utils/src/: data.rs  game.rs  lib.rs  movegen.rs  queue.rs
